Fix click on icon on Safari

--- a/sass/azendoo/components/_links.sass
+++ b/sass/azendoo/components/_links.sass
@@ -55,6 +55,7 @@ a.link--action
     float: left
     fill: $link-action-color
     margin-right: 2px
+    pointer-events: none
   &:hover
     color: $brand-primary
     svg.azicon
